kube/classification.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: classification
  labels:
    app: classification
spec:
  replicas: 1
  selector:
    matchLabels:
      app: classification
  template:
    metadata:
      labels:
        app: classification
    spec:
      containers:
      - name: classification
        image: hatakekakashihk/sih-classification:latest
        imagePullPolicy: Always
        ports:
        - name: class-port
          containerPort: 5000
