kube/agriculturesvc.yaml
apiVersion: v1
kind: Service
metadata:
  name: agriculture-service
spec:
  type: ClusterIP
  selector:
    app: agriculture
  ports:
    - protocol: TCP
      port: 8000
      targetPort: agriculture-port
