kube/classificationsvc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: classification-service
  labels:
    app: classification
spec:
  selector:
    app: classification
  ports:
  - name: class-port
    port: 8000
    targetPort: 8000
  type: ClusterIP
