kube/diseasesvc.yaml
apiVersion: v1
kind: Service
metadata:
  name: disease-service
spec:
  type: ClusterIP
  selector:
    app: disease
  ports:
    - protocol: TCP
      port: 8000
      targetPort: disease-port
