kube/classficationingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: classification-ingress
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: classification.devopshemantkumar.info
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: classification-service
                port:
                  number: 5000
