kube/diseaseingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: disease-ingress
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: disease.devopshemantkumar.info
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: disease-service
                port:
                  number: 8000
